# KATANA

./: .clang-tidy  .gitignore  ARCHITECTURE.md  BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_NEW.md  CMakeLists.txt  README.md  SECURITY_AUDIT_FIXES.md  SOLUTIONS_REPORT.md  conanfile.py  debug_test.cpp  generate_benchmark_report.py  run_benchmarks.sh  test_debug.cpp  vcpkg.json
.docker_build/profile/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja
.docker_build/profile/benchmark/: CTestTestfile.cmake  cmake_install.cmake  performance_benchmark
.docker_build/profile/test/: CTestTestfile.cmake  cmake_install.cmake
.github/workflows/: ci.yml  coverage.yml
benchmark/: CMakeLists.txt  README.md  async_benchmark.cpp  comprehensive_benchmark.cpp  headers_benchmark.cpp  http_load_benchmark.cpp  io_buffer_benchmark.cpp  latency_benchmark.cpp  mpsc_benchmark.cpp  performance_benchmark.cpp  router_benchmark.cpp  run_bombardier.sh  run_hey.sh  run_rest_api_test.sh  run_wrk.sh  simple_benchmark.cpp  timer_benchmark.cpp
docs/: OPENAPI.md  OPTIMIZATION_OPPORTUNITIES.md
examples/: README.md  basic_reactor.cpp  hello_world_server.cpp  middleware_examples.cpp  raii_echo_server.cpp  raii_http_server.cpp  rest_api_server.cpp  router_rest_api.cpp  simple_rest_api.cpp
katana/core/include/katana/core/: arena.hpp  arena_pool.hpp  compiler_hints.hpp  connection_pool.hpp  epoll_reactor.hpp  fd_watch.hpp  fixed_ring_buffer.hpp  function_ref.hpp  http.hpp  http_field.hpp  http_headers.hpp  inplace_function.hpp  io_buffer.hpp  io_uring_reactor.hpp  metrics.hpp  mpsc_queue.hpp  openapi_ast.hpp  problem.hpp  reactor.hpp  reactor_pool.hpp  ring_buffer_queue.hpp  router.hpp  scoped_fd.hpp  shutdown.hpp  simd_http.hpp  simd_utils.hpp  socket_opts.hpp  (+4 more)
katana/core/src/: arena.cpp  arena_pool.cpp  cpu_info.cpp  epoll_reactor.cpp  http.cpp  http_field.cpp  io_buffer.cpp  io_uring_reactor.cpp  openapi_loader.cpp  reactor_pool.cpp  shutdown.cpp  system_limits.cpp  tcp_listener.cpp  tcp_socket.cpp
profiling_results/io_buffer_perf_20251130T222457Z/: perf.script
profiling_results/io_buffer_perf_large_append_20251130T230604Z/: perf.script
profiling_results/performance_benchmark_20251125T013003Z/: perf.script  perf_report.txt
profiling_results/performance_benchmark_20251125T013418Z/: perf.script  perf_report.txt
test/: CMakeLists.txt
test/integration/: test_http_server.cpp
test/unit/: test_http.cpp  test_http_fuzzer_regression.cpp  test_http_headers.cpp  test_io_buffer.cpp  test_openapi_ast.cpp  test_reactor.cpp  test_reactor_pool.cpp
